Problems :  1) Display overflow menu on main Screen - fixed  2) ViewPager Screens disappear - fixed  3) Hide the App Bar on Welcome Screen.  4) User Details preference Screen to activity navigation problem.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.venkata.sai.pavan.phonecop.MainActivity" />
         </activity>
+        <activity
+            android:name=".UserDetailsScreen"
+            android:label="@string/user_details_screen_title"
+            android:parentActivityName=".SettingsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.venkata.sai.pavan.phonecop.SettingsActivity" />
+        </activity>
     </application>
 
 </manifest>
