--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.venkata.sai.pavan.phonecop">
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera2" android:required="true" />
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    
+
+
+
+
 
     <application
         android:allowBackup="true"
@@ -26,14 +37,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.venkata.sai.pavan.phonecop.MainActivity" />
         </activity>
-        <activity
-            android:name=".UserDetailsScreen"
-            android:label="@string/user_details_screen_title"
-            android:parentActivityName=".SettingsActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.venkata.sai.pavan.phonecop.SettingsActivity" />
-        </activity>
+        
+        <provider
+            android:authorities="com.venkata.sai.pavan.phonecop"
+            android:name="com.venkata.sai.pavan.phonecop.DataStore.phoneCopContentProvider"
+            android:exported="false" />
+        
     </application>
+
+
 
 </manifest>
