contacts recycler view problem

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,6 @@
     <uses-feature android:name="android.hardware.camera2" android:required="true" />
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    
-
 
 
 
@@ -30,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".SettingsScreen.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MainActivity">
             <meta-data
